...
                                    } else {
                                        inputResult[selectNum] = String(num)
                                        isOpen = false
                                    }
                                }
                                .alert(isPresented: $showingAlert) {
                                    Alert(title: Text("알림"), message: Text("중복된 숫자는 입력할 수 없습니다."),
                                                      dismissButton: .default(Text("확인")))
                                }
                                .accessibilityIdentifier("keypad\(num)")
                                .font(.system(size: 45, weight: .bold))
                                .foregroundColor(.black)
                                .padding(9)
                            }
...
